<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan"
        android:iconTint="@color/colorAccent"
        android:title="@string/scan" />

    <item
        android:id="@+id/navigation_inUse"
        android:icon="@drawable/ic_in_use_active"
        android:title="@string/home"
        android:iconTint="@color/colorAccent"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:iconTint="@color/colorAccent"
        android:title="@string/title_notifications" />

   <!-- <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />-->

</menu>
