<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context="net.ui.WelcomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/lin_logo">
        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/cp_withouticon_logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lin_labels"
        android:layout_below="@+id/lin_logo"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"

            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/welcome"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13.5sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorBlack"
            android:text="@string/newUserLbl"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lin_labels">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorButtonWhite"
            android:id="@+id/button_sign_up"
            android:gravity="center"
            android:textSize="14sp"
            android:textAllCaps="false"
            style="@style/ButtonStyle"

            android:text="@string/newUserBtn"
            android:background="@drawable/btnbg_curved_dark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:gravity="start"
            android:textSize="13.5sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@color/colorBlack"
            android:text="@string/tap_the_button_etc_existing_user_etc"/>
        <Button
            android:id="@+id/button_to_login"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/login"
            android:textColor="@color/colorButtonWhite"
            android:textAllCaps="false"
            android:textSize="14sp"
            style="@style/ButtonStyle"

            android:gravity="center"
            android:background="@drawable/btnbg_curved_dark"
            android:layout_height="50dp"/>
    </LinearLayout>
</RelativeLayout>

